src/browser_action/css/_search.scss
// Popup header
//
.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  padding: var(--spacing-02) var(--spacing-06);
  background-color: var(--colors-grey-900);
  color: #fff;
  min-height: 5.2rem;
  z-index: 100;
}

.header__logo {
  fill: #fff;
}

.header__metas {
  margin-left: auto;
  display: flex;
  align-items: center;
  gap: var(--spacing-02);
  font-size: 1.2rem;
  font-weight: 500;
  line-height: calc(16/12);
}

.header__all-results {
  display: none;
  transition: color 200ms ease-in;

  span {
    text-decoration: underline;
    color: #fff;
  }

  &:hover,
  &:focus {
    text-decoration: none;

    span {
      text-decoration: none;
      color: var(--colors-grey-200);
    }
  }

  &::after {
    content: "•";
    display: inline-block;
    color: var(--colors-grey-400);
    margin-left: calc(var(--spacing-02) - .25em);
    font-weight: 500;
    text-decoration: none;
  }
}

// Account
.account-not-logged,
.account-logged,
.account-upgrade-cta {
    display: none;
}

.account-avatar {
  margin-left: var(--spacing-01);
  text-decoration: none;
}

.account-avatar__img {
  width: 2rem;
  height: 2rem;
}

.account-not-logged {
  .h-button:not(:first-child) {
    margin-left: var(--spacing-01);
  }
}

.account-upgrade-cta {
  display: inline;
  margin: 0 var(--spacing-01) 0 var(--spacing-02);
}


// Loading placeholder
//
@keyframes placeHolderShimmer{
  0%{
    background-position: -700px 0
  }
  100%{
    background-position: 700px 0
  }
}

#loading-placeholder {
  padding: 0 24px 24px;

  .background-masker {
    animation-duration: 2s;
    animation-fill-mode: forwards;
    animation-iteration-count: infinite;
    animation-name: placeHolderShimmer;
    animation-timing-function: linear;
    background: #f6f6f6;
    background: linear-gradient(to right, #f3f3f3 8%, #eee 18%, #f3f3f3 33%);
    background-size: 700px 104px;
    position: relative;
  }

  .people-search-block {
    margin-top: 32px;
    height: 56px;
  }

  .result-name-block {
    margin-top: 24px;
    height: 16px;
    width: 200px;
  }

  .result-email-block {
    margin-top: 8px;
    height: 16px;
    width: 300px;
  }
}

// No results
//
.ds-no-results {
  .leads-manager,
  .results-header,
  .ds-results,
  .filters {
    display: none;
  }
}


// Leads list (footer)
//
.leads-manager {
  display: flex;
  align-items: center;
  gap: var(--spacing-04);
  justify-content: space-between;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: var(--spacing-04) var(--spacing-06);
  background: #FFFFFF;
  border-top: 1px solid var(--colors-grey-300);
  box-shadow: 0px -6px 12px rgba(0, 0, 0, 0.04);
  z-index: 90;
}

.list-select-container {
  display: flex;
  align-items: center;
  gap: var(--spacing-02);

  label {
    font-weight: 500;
    font-size: 1.3rem;
    color: var(--colors-grey-800);
    margin: 0;
  }
}

.leads-manager__list {
  width: 24rem;
}

.leads-manager__link {
  font-size: 1.2rem;
  text-align: right;
  text-decoration-line: underline;
  color: var(--colors-grey-700);
  text-decoration-color: var(--colors-grey-400);
  transition: text-decoration-color 100ms ease-in;

  &:hover,
  &:focus {
    color: var(--colors-grey-800);
    text-decoration-color: transparent;
  }
}

// Error notifications or empty states
//
.error {
  display: none;
  margin: 0px 20px 90px 20px;
}

#linkedin-notification,
#empty-notification,
#blocked-notification {
  display: none;
  padding: var(--spacing-16) var(--spacing-10);
}

// Results header
//
.results-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: var(--spacing-04) var(--spacing-06);
}

.results-header__count {
  margin: 0;
  font-size: 1.4rem;
  font-weight: 400;
  line-height: calc(24/14);
  color: var(--colors-grey-900);
}

.results-header__pattern {
  display: none;
  font-size: 1.3rem;
  line-height: calc(24/13);
  color: var(--colors-grey-700);
}

// Filters
//
.filters {
  display: flex;
  align-items: center;
  gap: var(--spacing-02);
  padding: var(--spacing-04) var(--spacing-06);
  background: var(--colors-grey-100);
  border-top: 1px solid var(--colors-grey-300);
  border-bottom: 1px solid var(--colors-grey-300);

  [data-selected-filters] {
    .fa-angle-down {
      order: 10;
    }

    &::after {
      content: attr(data-selected-filters);
      width: var(--spacing-04);
      height: var(--spacing-04);
      background-color: var(--colors-grey-700);
      color: #fff;
      border-radius: 50%;
      font-size: 1rem;
      line-height: calc(16/10);
    }
  }
}

.filters-dropdown {
  padding: 0;
  background: #fff;
  box-shadow: 0px 4px 12px rgba(29, 38, 46, 0.12), 0px 12px 24px rgba(29, 38, 46, 0.08);
  border: 1px solid var(--colors-grey-300);
  border-radius: 4px;
  overflow: hidden;

  &:lang(fr) {
    min-width: 21rem;
  }
}

.filters-dropdown__submit {
  display: block;
  width: 100%;
  padding: var(--spacing-02);
  border: 0;
  border-top: 1px solid var(--colors-grey-300);
  background: #fff;
  text-align: center;
  font-size: 1.3rem;
  font-weight: 600;
  line-height: calc(20/13);
  color: var(--colors-secondary-700);
  transition: background-color 150ms ease-in;

  &:hover,
  &:focus {
    background-color: var(--colors-grey-100);
  }
}

.filters-choice {
  list-style-type: none;
  padding: var(--spacing-04);
  margin: 0;
}

.filters-choice__item {
  &:not(:first-child) {
    margin-top: var(--spacing-02);
  }
}

.filters-choice__checkbox,
.filters-choice__radio {
  display: flex;
  align-items: center;
  gap: var(--spacing-02);

  input {
    margin: 0;
  }

  label {
    margin: 0;
    font-size: 1.2rem;
    line-height: calc(16/12);
    font-weight: 500;
    color: var(--colors-grey-800);
  }
}

.filters__by-name {
  margin-left: auto;

  &[aria-expanded="true"] {
    .fa-angle-down {
      transform: rotate(180deg);
    }
  }
}

.filters__clear {
  display: none;
}
/* ... */

